plugins {
    id 'java'
    id 'application'
}

group 'com.tlc'
version '1.0'
sourceCompatibility = 11

mainClassName = 'com.tlc.Main'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    testImplementation 'junit:junit:4.13.2'
    implementation 'com.itextpdf:itext7-core:7.2.5'
}

application {
    mainClass = mainClassName
    // Open java.time for reflective access by Gson
    applicationDefaultJvmArgs = ["--add-opens", "java.base/java.time=ALL-UNNAMED"]
}

sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}
